After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712755 - Misplaced GdTaggedEntryTag in gedit's search entry
Misplaced GdTaggedEntryTag in gedit's search entry
Status: RESOLVED FIXED
Product: libgd
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: libgd maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-11-20 17:14 UTC by Volker Sobek (weld)
Modified: 2013-12-19 22:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Misplaced GdTaggedEntryTag in gedit (4.11 KB, image/png)
2013-11-20 17:14 UTC, Volker Sobek (weld)
  Details
GdTaggedEntry: Fix inserting tag when unmapped (1.23 KB, patch)
2013-12-19 14:02 UTC, Volker Sobek (weld)
none Details | Review
GdTaggedEntry: Fix inserting tag when unmapped (4.02 KB, patch)
2013-12-19 15:10 UTC, Volker Sobek (weld)
committed Details | Review

Description Volker Sobek (weld) 2013-11-20 17:14:06 UTC
Created attachment 260344 [details]
Misplaced GdTaggedEntryTag in gedit

How to reproduce in gedit:

- Ctrl+F to open the search
- enter some search text (with at least one match in the buffer)
- de-focus the search entry; it will slide out
- Ctrl+G to jump to the next search match (search entry stays hidden)
- Ctrl+F to reveal the search entry again

Result: See attached screenshot
Comment 1 Volker Sobek (weld) 2013-12-19 14:02:58 UTC
Created attachment 264547 [details] [review]
GdTaggedEntry: Fix inserting tag when unmapped

When a GdTaggedEntryTag was inserted into an unmapped but realized
GdTaggedEntry, the tag's GDK window wasn't created. This resulted in a
drawing failure on showing the entry again. Fix this by making sure to
realize the tag at once if the entry is already realized.
Comment 2 Volker Sobek (weld) 2013-12-19 15:10:45 UTC
Created attachment 264550 [details] [review]
GdTaggedEntry: Fix inserting tag when unmapped

When a GdTaggedEntryTag was inserted into an unmapped but realized
GdTaggedEntry, the tag's GDK window wasn't created. This resulted in a
drawing failure on showing the entry again. Fix this by making sure to
realize the tag at once if the entry is already realized.

Also enhance test-tagged-entry to allow testing this.
Comment 3 Volker Sobek (weld) 2013-12-19 22:52:03 UTC
Attachment 264550 [details] pushed as b943027 - GdTaggedEntry: Fix inserting tag when unmapped